footer in place

--- a/index.html
+++ b/index.html
@@ -4,28 +4,69 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<title>John Coppola</title>
 </head>
 <body>
-	<h1 class="name">JOHN COPPOLA</h1>
+	<h1 class="name">john coppola</h1>
 
-	<h2 class="header about-header">ABOUT</h2>
+	<h2 class="header about-header">about</h2>
 	<div class="section about">
-		<p>Hello! My name is John and I'm a front-end developer in Brooklyn, NY. I currently work for an Atlanta-based startup called Insiten where my kick-ass team and I build software for businesses. I love the web in general but am especially passionate about the intersection of design and technology. I am also an avid learner, builder, and mentor in the development community. Outside of web development I enjoy Spanish, travel, eating, and salsa dancing.</p>
+		<p>Hello! My name is John and I'm a software engineer in Brooklyn, NY. I currently work remotely for an Atlanta-based startup called Insiten where my kick-ass team and I build software for businesses.</p>
+
+		<p>I love the web in its entirety, but I am especially passionate about the front-end side of development. My favorite aspect of the field is the intersection of design and technology. I am constantly learning, building, and participating in the dev community both online and in person.</p>
+
+		<p>Besides web development, I also enjoy Spanish, travel, eating, and salsa dancing.</p>
 	</div>
 	<div class="bg about-bg"></div>
 
-	<h2 class="header experience-header">EXPERIENCE</h2>
+	<h2 class="header experience-header">experience</h2>
 	<div class="section experience">
-		<p>Text goes here</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu ante sed enim sollicitudin auctor sit amet ac dui. Vivamus eu tincidunt erat. Proin et scelerisque ipsum. Donec dolor turpis, interdum a scelerisque non, lobortis in eros. Etiam vitae metus iaculis, feugiat lectus congue, mattis purus. Donec non sem et arcu ullamcorper gravida a ut turpis. Morbi congue felis at risus vehicula interdum. Phasellus eu ipsum sed tellus pretium consequat. Fusce pharetra lacus at sem vulputate dignissim. Duis tincidunt, est et tincidunt tempor, enim eros consequat elit, vitae dignissim nisl est nec mi. Ut eleifend elementum metus vel mattis. Etiam eu efficitur lectus. Sed bibendum mattis ex sit amet molestie. Integer dapibus lobortis turpis, nec fringilla tortor rhoncus id.</p>
+
+		<p>Ut ligula massa, molestie vel convallis lacinia, iaculis dapibus sem. In id odio leo. Pellentesque volutpat tempus metus. Curabitur lobortis ligula augue, vel cursus est ornare vitae. Integer sit amet metus dui. Quisque eros justo, gravida eget libero eget, gravida feugiat nisi. Proin at convallis diam. Proin iaculis, lacus quis vulputate mattis, velit nunc pulvinar massa, et auctor massa ligula vel erat. Pellentesque ac risus suscipit, rhoncus quam non, pulvinar erat. In hac habitasse platea dictumst. Donec commodo nisl sit amet turpis scelerisque, in porta quam maximus.</p>
+
+		<p>Sed venenatis blandit tellus et pretium. Nulla facilisi. Nullam commodo, nulla ut malesuada egestas, arcu enim ullamcorper nisi, a ornare lectus nulla vitae sapien. In hac habitasse platea dictumst. Cras aliquet hendrerit nisi, eu lobortis velit scelerisque ut. Maecenas vitae ex purus. Aliquam molestie, turpis cursus imperdiet finibus, tellus justo luctus magna, ac euismod est ex et magna. Aenean pharetra erat nisl, vel feugiat mauris ornare ac. Donec bibendum semper nunc, eget varius ante lacinia nec. Duis a varius ex. In hac habitasse platea dictumst. Sed vel diam laoreet, gravida lacus tempor, gravida neque. Duis aliquet nibh sem, non aliquet massa luctus vel. Sed iaculis eleifend tellus ut tempor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
 	</div>
 
-	<h2 class="header contact-header">CONTACT</h2>
+	<div class="contact">
+		<ul class="contact-list">
+			<li class="icon-container">
+				<a href="mailto:jdcoppola@gmail.com">
+					<i class="fa fa-envelope-o" aria-hidden="true"></i>
+				</a>
+			</li>
+			<li class="icon-container">
+				<a href="https://www.linkedin.com/in/john-coppola/" target="_blank">
+					<i class="fa fa-linkedin-square" aria-hidden="true"></i>
+				</a>
+			</li>
+			<li class="icon-container">
+				<a href="https://github.com/johnnycopes" target="_blank">
+					<i class="fa fa-github" aria-hidden="true"></i>
+				</a>
+			</li>
+			<li class="icon-container">
+				<a href="https://codepen.io/johnnycopes/" target="_blank">
+					<i class="fa fa-codepen" aria-hidden="true"></i>
+				</a>
+			</li>
+		</ul>
+	</div>
+
+	<!-- <h2 class="header contact-header">contact</h2>
 	<div class="section contact">
 		<h4>Get in touch / learn more:</h4>
+		<ul>
+			<li>
+				<i class="fa fa-envelope-o" aria-hidden="true"></i>
+				<i class="fa fa-linkedin-square" aria-hidden="true"></i>
+				<i class="fa fa-codepen" aria-hidden="true"></i>
+			</li>
+		</ul>
 	</div>
-	<div class="bg contact-bg"></div>
+	<div class="bg contact-bg"></div> -->
 
 	<script src="js/app.js"></script>
 </body>
