resume section experimentation

--- a/index.html
+++ b/index.html
@@ -23,50 +23,73 @@
 
 	<h2 class="header experience-header">experience</h2>
 	<div class="section experience">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris eu ante sed enim sollicitudin auctor sit amet ac dui. Vivamus eu tincidunt erat. Proin et scelerisque ipsum. Donec dolor turpis, interdum a scelerisque non, lobortis in eros. Etiam vitae metus iaculis, feugiat lectus congue, mattis purus. Donec non sem et arcu ullamcorper gravida a ut turpis. Morbi congue felis at risus vehicula interdum. Phasellus eu ipsum sed tellus pretium consequat. Fusce pharetra lacus at sem vulputate dignissim. Duis tincidunt, est et tincidunt tempor, enim eros consequat elit, vitae dignissim nisl est nec mi. Ut eleifend elementum metus vel mattis. Etiam eu efficitur lectus. Sed bibendum mattis ex sit amet molestie. Integer dapibus lobortis turpis, nec fringilla tortor rhoncus id.</p>
-
-		<p>Ut ligula massa, molestie vel convallis lacinia, iaculis dapibus sem. In id odio leo. Pellentesque volutpat tempus metus. Curabitur lobortis ligula augue, vel cursus est ornare vitae. Integer sit amet metus dui. Quisque eros justo, gravida eget libero eget, gravida feugiat nisi. Proin at convallis diam. Proin iaculis, lacus quis vulputate mattis, velit nunc pulvinar massa, et auctor massa ligula vel erat. Pellentesque ac risus suscipit, rhoncus quam non, pulvinar erat. In hac habitasse platea dictumst. Donec commodo nisl sit amet turpis scelerisque, in porta quam maximus.</p>
-
-		<p>Sed venenatis blandit tellus et pretium. Nulla facilisi. Nullam commodo, nulla ut malesuada egestas, arcu enim ullamcorper nisi, a ornare lectus nulla vitae sapien. In hac habitasse platea dictumst. Cras aliquet hendrerit nisi, eu lobortis velit scelerisque ut. Maecenas vitae ex purus. Aliquam molestie, turpis cursus imperdiet finibus, tellus justo luctus magna, ac euismod est ex et magna. Aenean pharetra erat nisl, vel feugiat mauris ornare ac. Donec bibendum semper nunc, eget varius ante lacinia nec. Duis a varius ex. In hac habitasse platea dictumst. Sed vel diam laoreet, gravida lacus tempor, gravida neque. Duis aliquet nibh sem, non aliquet massa luctus vel. Sed iaculis eleifend tellus ut tempor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+		<h1>Professional</h1>
+		<ul class="experience-list">
+			<li class="card insiten">
+				<img class="company-img" src="assets/img/insiten.png" alt="">
+				<h2 class="title">Software Engineer</h2>
+				<h3 class="company">Insiten</h3>
+				<h3 class="location">New York, NY</h3>
+				<h3 class="date">Feb 2017 - present</h3>
+			</li>
+			<li class="card jwt">
+				<img class="company-img" src="assets/img/jwt.png" alt="">
+				<h2 class="title">Freelance Web Developer</h2>
+				<h3 class="company">J. Walter Thompson</h3>
+				<h3 class="location">New York, NY</h3>
+				<h3 class="date">Feb 2017</h3>
+			</li>
+			<li class="card doable">
+				<img class="company-img" src="assets/img/doable.png" alt="">
+				<h2 class="title">Freelance Web Developer</h2>
+				<h3 class="company">Doable Innovation</h3>
+				<h3 class="location">New York, NY</h3>
+				<h3 class="date">Jan 2017 - Feb 2017</h3>
+			</li>
+			<li class="card wunderman">
+				<img class="company-img" src="assets/img/wunderman.svg" alt="">
+				<h2 class="title">Front-End Web Developer</h2>
+				<h3 class="company">Wunderman</h3>
+				<h3 class="location">Madrid, Spain</h3>
+				<h3 class="date">Mar 2016 - Aug 2016</h3>
+			</li>
+		</ul>
+		<h1>Education</h1>
+		<ul class="experience-list">
+			<li class="card digitalcrafts">
+				<img class="company-img" src="assets/img/digitalcrafts.png" alt="">
+				<h2 class="title">Student</h2>
+				<h3 class="company">DigitalCrafts</h3>
+				<h3 class="location">Atlanta, GA</h3>
+				<h3 class="date">Sep 2016 - Jan 2017</h3>
+			</li>
+		</ul>
 	</div>
 
 	<div class="contact">
 		<ul class="contact-list">
-			<li class="icon-container">
-				<a href="mailto:jdcoppola@gmail.com">
-					<i class="fa fa-envelope-o" aria-hidden="true"></i>
-				</a>
-			</li>
-			<li class="icon-container">
-				<a href="https://www.linkedin.com/in/john-coppola/" target="_blank">
-					<i class="fa fa-linkedin-square" aria-hidden="true"></i>
-				</a>
-			</li>
-			<li class="icon-container">
-				<a href="https://github.com/johnnycopes" target="_blank">
-					<i class="fa fa-github" aria-hidden="true"></i>
-				</a>
-			</li>
-			<li class="icon-container">
-				<a href="https://codepen.io/johnnycopes/" target="_blank">
-					<i class="fa fa-codepen" aria-hidden="true"></i>
-				</a>
-			</li>
-		</ul>
-	</div>
-
-	<!-- <h2 class="header contact-header">contact</h2>
-	<div class="section contact">
-		<h4>Get in touch / learn more:</h4>
-		<ul>
 			<li>
-				<i class="fa fa-envelope-o" aria-hidden="true"></i>
-				<i class="fa fa-linkedin-square" aria-hidden="true"></i>
-				<i class="fa fa-codepen" aria-hidden="true"></i>
+				<a class="contact-link" href="mailto:jdcoppola@gmail.com">
+					<i class="contact-icon fa fa-envelope-o" aria-hidden="true"></i>
+				</a>
+			</li>
+			<li>
+				<a class="contact-link" href="https://www.linkedin.com/in/john-coppola/" target="_blank">
+					<i class="contact-icon fa fa-linkedin-square" aria-hidden="true"></i>
+				</a>
+			</li>
+			<li>
+				<a class="contact-link" href="https://github.com/johnnycopes" target="_blank">
+					<i class="contact-icon fa fa-github" aria-hidden="true"></i>
+				</a>
+			</li>
+			<li>
+				<a class="contact-link" href="https://codepen.io/johnnycopes/" target="_blank">
+					<i class="contact-icon fa fa-codepen" aria-hidden="true"></i>
+				</a>
 			</li>
 		</ul>
 	</div>
-	<div class="bg contact-bg"></div> -->
 
 	<script src="js/app.js"></script>
 </body>
