forgoes the images idea and arranges resume cleanly

--- a/index.html
+++ b/index.html
@@ -23,45 +23,46 @@
 
 	<h2 class="header experience-header">experience</h2>
 	<div class="section experience">
-		<h1>Professional</h1>
+		<h1 class="category">Professional</h1>
 		<ul class="experience-list">
 			<li class="card insiten">
-				<img class="company-img" src="assets/img/insiten.png" alt="">
 				<h2 class="title">Software Engineer</h2>
 				<h3 class="company">Insiten</h3>
 				<h3 class="location">New York, NY</h3>
 				<h3 class="date">Feb 2017 - present</h3>
 			</li>
 			<li class="card jwt">
-				<img class="company-img" src="assets/img/jwt.png" alt="">
 				<h2 class="title">Freelance Web Developer</h2>
 				<h3 class="company">J. Walter Thompson</h3>
 				<h3 class="location">New York, NY</h3>
 				<h3 class="date">Feb 2017</h3>
 			</li>
 			<li class="card doable">
-				<img class="company-img" src="assets/img/doable.png" alt="">
 				<h2 class="title">Freelance Web Developer</h2>
 				<h3 class="company">Doable Innovation</h3>
 				<h3 class="location">New York, NY</h3>
 				<h3 class="date">Jan 2017 - Feb 2017</h3>
 			</li>
 			<li class="card wunderman">
-				<img class="company-img" src="assets/img/wunderman.svg" alt="">
 				<h2 class="title">Front-End Web Developer</h2>
 				<h3 class="company">Wunderman</h3>
 				<h3 class="location">Madrid, Spain</h3>
 				<h3 class="date">Mar 2016 - Aug 2016</h3>
 			</li>
 		</ul>
-		<h1>Education</h1>
+		<h1 class="category">Education</h1>
 		<ul class="experience-list">
 			<li class="card digitalcrafts">
-				<img class="company-img" src="assets/img/digitalcrafts.png" alt="">
-				<h2 class="title">Student</h2>
+				<h2 class="title">Full-Stack Web Development</h2>
 				<h3 class="company">DigitalCrafts</h3>
 				<h3 class="location">Atlanta, GA</h3>
 				<h3 class="date">Sep 2016 - Jan 2017</h3>
+			</li>
+			<li class="card clark">
+				<h2 class="title">B.A. Psychology // Sociology</h2>
+				<h3 class="company">Clark University</h3>
+				<h3 class="location">Worcester, MA</h3>
+				<h3 class="date">Spring 2012</h3>
 			</li>
 		</ul>
 	</div>
