adds links to experience page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<h2 class="header about-header">about</h2>
 	<div class="section about">
-		<p>Hello! My name is John and I'm a software engineer in Brooklyn, NY. I currently work remotely for an Atlanta-based startup called Insiten where my kick-ass team and I build software for businesses.</p>
+		<p>Hello! My name is John and I'm a software engineer in Brooklyn, NY. I currently work remotely for an Atlanta-based startup called <a href="https://insiten.com/" target="_blank">Insiten</a> where my kick-ass team and I build software for businesses.</p>
 
 		<p>I love the web in its entirety, but I am especially passionate about the front-end side of development. My favorite aspect of the field is the intersection of design and technology. I am constantly learning, building, and participating in the dev community both online and in person.</p>
 
@@ -27,25 +27,33 @@
 		<ul class="experience-list">
 			<li class="card insiten">
 				<h2 class="title">Software Engineer</h2>
-				<h3 class="company">Insiten</h3>
+				<h3 class="organization">
+					<a href="https://insiten.com/" target="_blank">Insiten</a>
+				</h3>
 				<h3 class="location">New York, NY</h3>
 				<h3 class="date">Feb 2017 - present</h3>
 			</li>
 			<li class="card jwt">
 				<h2 class="title">Freelance Web Developer</h2>
-				<h3 class="company">J. Walter Thompson</h3>
+				<h3 class="organization">
+					<a href="https://www.jwt.com/en/" target="_blank">J. Walter Thompson</a>
+				</h3>
 				<h3 class="location">New York, NY</h3>
 				<h3 class="date">Feb 2017</h3>
 			</li>
 			<li class="card doable">
 				<h2 class="title">Freelance Web Developer</h2>
-				<h3 class="company">Doable Innovation</h3>
+				<h3 class="organization">
+					<a href="https://www.doable.com/" target="_blank">Doable Innovation</a>
+				</h3>
 				<h3 class="location">New York, NY</h3>
 				<h3 class="date">Jan 2017 - Feb 2017</h3>
 			</li>
 			<li class="card wunderman">
 				<h2 class="title">Front-End Web Developer</h2>
-				<h3 class="company">Wunderman</h3>
+				<h3 class="organization">
+					<a href="http://www.wunderman.com/" target="_blank">Wunderman</a>
+				</h3>
 				<h3 class="location">Madrid, Spain</h3>
 				<h3 class="date">Mar 2016 - Aug 2016</h3>
 			</li>
@@ -54,13 +62,17 @@
 		<ul class="experience-list">
 			<li class="card digitalcrafts">
 				<h2 class="title">Full-Stack Web Development</h2>
-				<h3 class="company">DigitalCrafts</h3>
+				<h3 class="organization">
+					<a href="https://www.digitalcrafts.com/" target="_blank">DigitalCrafts</a>
+				</h3>
 				<h3 class="location">Atlanta, GA</h3>
 				<h3 class="date">Sep 2016 - Jan 2017</h3>
 			</li>
 			<li class="card clark">
 				<h2 class="title">B.A. Psychology // Sociology</h2>
-				<h3 class="company">Clark University</h3>
+				<h3 class="organization">
+					<a href="http://www.clarku.edu/" target="_blank">Clark University</a>
+				</h3>
 				<h3 class="location">Worcester, MA</h3>
 				<h3 class="date">Spring 2012</h3>
 			</li>
