--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 	<h2 class="header about-header">about</h2>
 	<div class="section about">
-		<p>Hello! My name is John and I'm a software engineer in Brooklyn, NY. I currently work remotely for an Atlanta-based startup called <a href="https://insiten.com/" target="_blank">Insiten</a> where my kick-ass team and I build software for businesses.</p>
+		<p class="copy">Hello! My name is John and I'm a software engineer in Brooklyn, NY. I currently work remotely for an Atlanta-based startup called <a href="https://insiten.com/" target="_blank">Insiten</a> where my kick-ass team and I build innovative, business-focused software.</p>
 
-		<p>I love the web in its entirety, but I am especially passionate about the front-end side of development. My favorite aspect of the field is the intersection of design and technology. I am constantly learning, building, and participating in the dev community both online and in person.</p>
+		<p class="copy">I love the web in its entirety, but I am especially passionate about the front-end side of development. My favorite aspect of the field is the intersection of design and technology. I am constantly learning, building, and participating in the dev community both online and in person.</p>
 
-		<p>Besides web development, I also enjoy Spanish, travel, eating, and salsa dancing.</p>
+		<p class="copy">Besides web development, I also enjoy Spanish, travel, eating, and salsa dancing.</p>
 	</div>
 	<div class="bg about-bg"></div>
 
