adds volunteer section; slows animations by 100ms; adds a bit of space between experience lists

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
 				<h3 class="date">Mar 2016 - Aug 2016</h3>
 			</li>
 		</ul>
+		<h1 class="category">Volunteer</h1>
+		<ul class="experience-list">
+			<li class="card code-nation">
+				<h2 class="title">Classroom Volunteer</h2>
+				<h3 class="organization">
+					<a href="https://codenation.org/" target="_blank">Code Nation</a>
+				</h3>
+				<h3 class="location">New York, NY</h3>
+				<h3 class="date">Jul 2018 - present</h3>
+			</li>
+		</ul>
 		<h1 class="category">Education</h1>
 		<ul class="experience-list">
 			<li class="card digitalcrafts">
