updates about section and adds hero pattern

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<p class="copy">I love the web in its entirety, but I am especially passionate about the front-end side of development. My favorite aspect of the field is the intersection of design and technology. I am constantly learning, building, and participating in the dev community both online and in person.</p>
 
-		<p class="copy">Besides web development, I also enjoy Spanish, travel, eating, and salsa dancing.</p>
+		<p class="copy">Besides web development, I also enjoy Spanish, travel, cooking, and salsa dancing.</p>
 	</div>
 	<div class="bg about-bg"></div>
 
