updates copy; reduces vertical movement from name animation

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 	<title>John Coppola</title>
 </head>
 <body>
-	<h1 class="name">john coppola</h1>
+	<div class="name">
+		<h1 class="name-text">john coppola</h1>
+	</div>
 
 	<h2 class="header about-header">about</h2>
 	<div class="section about">
-		<p class="copy">Hello! My name is John and I'm a software engineer in Brooklyn, NY. I currently work remotely for an Atlanta-based startup called <a href="https://insiten.com/" target="_blank">Insiten</a> where my kick-ass team and I build innovative, business-focused software.</p>
-
-		<p class="copy">I love the web in its entirety, but I am especially passionate about the front-end side of development. My favorite aspect of the field is the intersection of design and technology. I am constantly learning, building, and participating in the dev community both online and in person. </p>
-
-		<p class="copy">Besides web development, I also love Spanish, travel, food, rock climbing, board games, and salsa dancing.</p>
+		<p class="copy">Hello! My name is John and I'm a software engineer based in Brooklyn, NY. I currently work remotely for a data analytics startup called <a href="https://mode.com/" target="_blank">Mode</a>.
+		<p class="copy"></p>I love the web in its entirety, but I am especially passionate about front-end development. I am constantly learning and will occasionally work on projects in my spare time, which can be found on my <a href="https://github.com/johnnycopes" target="_blank">GitHub profile</a>.</p>
+		<p class="copy">Outside of web development, I also love Spanish, travel, food, rock climbing, board games, video games, and salsa dancing.</p>
 	</div>
 	<div class="bg about-bg"></div>
 
@@ -26,12 +26,20 @@
 		<h1 class="category">Professional</h1>
 		<ul class="experience-list">
 			<li class="card insiten">
+				<h2 class="title">Senior Software Engineer</h2>
+				<h3 class="organization">
+					<a href="https://mode.com/" target="_blank">Mode</a>
+				</h3>
+				<h3 class="location">Remote</h3>
+				<h3 class="date">Aug 2021 - present</h3>
+			</li>
+			<li class="card insiten">
 				<h2 class="title">Software Engineer</h2>
 				<h3 class="organization">
 					<a href="https://insiten.com/" target="_blank">Insiten</a>
 				</h3>
-				<h3 class="location">New York, NY</h3>
-				<h3 class="date">Feb 2017 - present</h3>
+				<h3 class="location">Remote</h3>
+				<h3 class="date">Feb 2017 - Aug 2021</h3>
 			</li>
 			<li class="card jwt">
 				<h2 class="title">Freelance Web Developer</h2>
