--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h2 class="header about-header">about</h2>
 	<div class="section about">
 		<p class="copy">Hello! My name is John and I'm a software engineer based in Brooklyn, NY. I currently work remotely for a data analytics startup called <a href="https://mode.com/" target="_blank">Mode</a>.
-		<p class="copy"></p>I love the web in its entirety, but I am especially passionate about front-end development. I am constantly learning and will occasionally work on projects in my spare time, which can be found on my <a href="https://github.com/johnnycopes" target="_blank">GitHub profile</a>.</p>
+		<p class="copy">I love the web in its entirety, but I am especially passionate about front-end development. I am constantly learning and will occasionally work on projects in my spare time, which can be found on my <a href="https://github.com/johnnycopes" target="_blank">GitHub profile</a>.</p>
 		<p class="copy">Outside of web development, I also love Spanish, travel, food, rock climbing, board games, video games, and salsa dancing.</p>
 	</div>
 	<div class="bg about-bg"></div>
