--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>John Coppola</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<title>John Coppola</title>
+	<script async src="https://analytics.eu.umami.is/script.js" data-website-id="5cbae3c1-e797-44bf-861a-8a525062d9be"></script>
 </head>
 <body>
 	<div class="name">
@@ -15,9 +16,9 @@
 
 	<h2 class="header about-header">about</h2>
 	<div class="section about">
-		<p class="copy">Hello! My name is John and I'm a software engineer based in Brooklyn, NY. I currently work remotely for a data analytics startup called <a href="https://mode.com/" target="_blank">Mode</a>.
+		<p class="copy">Hello! My name is John and I'm a software engineer based in Brooklyn, NY. I currently work remotely for a data analytics SASS company called <a href="https://www.thoughtspot.com/" target="_blank">ThoughtSpot</a>.
 		<p class="copy">I love the web in its entirety, but I am especially passionate about front-end development. I am constantly learning and will occasionally work on projects in my spare time, which can be found on my <a href="https://github.com/johnnycopes" target="_blank">GitHub profile</a>.</p>
-		<p class="copy">Outside of web development, I also love Spanish, travel, food, rock climbing, board games, video games, and salsa dancing.</p>
+		<p class="copy">Outside of programming, I also love Spanish, travel, food, rock climbing, board games, video games, and salsa dancing.</p>
 	</div>
 	<div class="bg about-bg"></div>
 
@@ -25,13 +26,21 @@
 	<div class="section experience">
 		<h1 class="category">Professional</h1>
 		<ul class="experience-list">
-			<li class="card insiten">
+			<li class="card thoughtspot">
+				<h2 class="title">Senior Software Engineer</h2>
+				<h3 class="organization">
+					<a href="https://thoughtspot.com/" target="_blank">ThoughtSpot</a>
+				</h3>
+				<h3 class="location">Remote</h3>
+				<h3 class="date">July 2023 - present</h3>
+			</li>
+			<li class="card mode">
 				<h2 class="title">Senior Software Engineer</h2>
 				<h3 class="organization">
 					<a href="https://mode.com/" target="_blank">Mode</a>
 				</h3>
 				<h3 class="location">Remote</h3>
-				<h3 class="date">Aug 2021 - present</h3>
+				<h3 class="date">Aug 2021 - July 2023</h3>
 			</li>
 			<li class="card insiten">
 				<h2 class="title">Software Engineer</h2>
@@ -74,7 +83,7 @@
 					<a href="https://www.qcc.edu/" target="_blank">Quinsigamond Community College</a>
 				</h3>
 				<h3 class="location">Remote</h3>
-				<h3 class="date">Mar 2022 - present</h3>
+				<h3 class="date">Mar 2022 - Nov 2023</h3>
 			</li>
 			<li class="card code-nation">
 				<h2 class="title">Classroom Volunteer</h2>
