--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 <body>
 	<div class="name">
-		<h1 class="name-text">john coppola</h1>
+		<h1 class="name-text">John Coppola</h1>
 	</div>
 
-	<h2 class="header about-header">about</h2>
+	<h2 class="header about-header">About</h2>
 	<div class="section about">
 		<p class="copy">Hello! My name is John and I'm a software engineer based in Brooklyn, NY. I currently work remotely for a data analytics SASS company called <a href="https://www.thoughtspot.com/" target="_blank">ThoughtSpot</a>.
-		<p class="copy">I love the web in its entirety, but I am especially passionate about front-end development. I am constantly learning and like working on projects in my spare time, which can be found on my <a href="https://github.com/johnnycopes" target="_blank">GitHub profile</a>.</p>
-		<p class="copy">Outside of programming, I also love Spanish, travel, food, rock climbing, board games, video games, and salsa dancing.</p>
+		<p class="copy">I love the web in its entirety, but am especially passionate about front-end development, visual design, and design systems. I have a number of side projects on my <a href="https://github.com/johnnycopes" target="_blank">GitHub profile</a> and am always learning something new.</p>
+		<p class="copy">Outside of programming, I also enjoy studying foreign languages (Spanish and Japanese), travel, food (especially pizza), stand-up comedy, board games, video games, and salsa dancing.</p>
 	</div>
 	<div class="bg about-bg"></div>
 
-	<h2 class="header experience-header">experience</h2>
+	<h2 class="header experience-header">Experience</h2>
 	<div class="section experience">
 		<h1 class="category">Professional</h1>
 		<ul class="experience-list">
