Updates Umami link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>John Coppola</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<script async src="https://analytics.eu.umami.is/script.js" data-website-id="5cbae3c1-e797-44bf-861a-8a525062d9be"></script>
+	<script defer src="https://cloud.umami.is/script.js" data-website-id="5cbae3c1-e797-44bf-861a-8a525062d9be"></script>
 </head>
 <body>
 	<div class="name">
