--- a/index.html
+++ b/index.html
@@ -1,143 +1,191 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>John Coppola</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<script defer src="https://cloud.umami.is/script.js" data-website-id="5cbae3c1-e797-44bf-861a-8a525062d9be"></script>
-</head>
-<body>
-	<div class="name">
-		<h1 class="name-text">John Coppola</h1>
-	</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>John Coppola</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="5cbae3c1-e797-44bf-861a-8a525062d9be"
+    ></script>
+  </head>
+  <body>
+    <div class="name">
+      <h1 class="name-text">John Coppola</h1>
+    </div>
 
-	<h2 class="header about-header">About</h2>
-	<div class="section about">
-		<p class="copy">Hello! My name is John and I'm a software engineer based in Brooklyn, NY. I currently work remotely for a data analytics SASS company called <a href="https://www.thoughtspot.com/" target="_blank">ThoughtSpot</a>.
-		<p class="copy">I love the web in its entirety, but am especially passionate about front-end development, visual design, and design systems. I have a number of side projects on my <a href="https://github.com/johnnycopes" target="_blank">GitHub profile</a> and am always learning something new.</p>
-		<p class="copy">Outside of programming, I also enjoy studying foreign languages (Spanish and Japanese), travel, food (especially pizza), stand-up comedy, board games, video games, and salsa dancing.</p>
-	</div>
-	<div class="bg about-bg"></div>
+    <h2 class="header about-header">About</h2>
+    <div class="section about">
+      <p class="copy">
+        Hello! My name is John and I'm a software engineer based in Brooklyn,
+        NY. I currently work remotely for a data analytics SASS company called
+        <a href="https://www.thoughtspot.com/" target="_blank">ThoughtSpot</a>.
+      </p>
+      <p class="copy">
+        I love the web in its entirety, but am especially passionate about
+        front-end development, visual design, and design systems. I have a
+        number of side projects on my
+        <a href="https://github.com/johnnycopes" target="_blank"
+          >GitHub profile</a
+        >
+        and am always learning something new.
+      </p>
+      <p class="copy">
+        Outside of programming, I also enjoy studying foreign languages (Spanish
+        and Japanese), travel, food (especially pizza), stand-up comedy, board
+        games, video games, and salsa dancing.
+      </p>
+    </div>
+    <div class="bg about-bg"></div>
 
-	<h2 class="header experience-header">Experience</h2>
-	<div class="section experience">
-		<h1 class="category">Professional</h1>
-		<ul class="experience-list">
-			<li class="card thoughtspot">
-				<h2 class="title">Senior Software Engineer</h2>
-				<h3 class="organization">
-					<a href="https://thoughtspot.com/" target="_blank">ThoughtSpot</a>
-				</h3>
-				<h3 class="location">Remote</h3>
-				<h3 class="date">July 2023 - present</h3>
-			</li>
-			<li class="card mode">
-				<h2 class="title">Senior Software Engineer</h2>
-				<h3 class="organization">
-					<a href="https://mode.com/" target="_blank">Mode</a>
-				</h3>
-				<h3 class="location">Remote</h3>
-				<h3 class="date">Aug 2021 - July 2023</h3>
-			</li>
-			<li class="card insiten">
-				<h2 class="title">Software Engineer</h2>
-				<h3 class="organization">
-					<a href="https://insiten.com/" target="_blank">Insiten</a>
-				</h3>
-				<h3 class="location">Remote</h3>
-				<h3 class="date">Feb 2017 - Aug 2021</h3>
-			</li>
-			<li class="card jwt">
-				<h2 class="title">Freelance Web Developer</h2>
-				<h3 class="organization">
-					<a href="https://www.jwt.com/en/" target="_blank">J. Walter Thompson</a>
-				</h3>
-				<h3 class="location">New York, NY</h3>
-				<h3 class="date">Feb 2017</h3>
-			</li>
-			<li class="card doable">
-				<h2 class="title">Freelance Web Developer</h2>
-				<h3 class="organization">
-					<a href="https://www.doable.com/" target="_blank">Doable Innovation</a>
-				</h3>
-				<h3 class="location">New York, NY</h3>
-				<h3 class="date">Jan 2017 - Feb 2017</h3>
-			</li>
-			<li class="card wunderman">
-				<h2 class="title">Front-End Web Developer</h2>
-				<h3 class="organization">
-					<a href="http://www.wunderman.com/" target="_blank">Wunderman</a>
-				</h3>
-				<h3 class="location">Madrid, Spain</h3>
-				<h3 class="date">Mar 2016 - Aug 2016</h3>
-			</li>
-		</ul>
-		<h1 class="category">Volunteering</h1>
-		<ul class="experience-list">
-			<li class="card quinsigamond">
-				<h2 class="title">Mentor</h2>
-				<h3 class="organization">
-					<a href="https://www.qcc.edu/" target="_blank">Quinsigamond Community College</a>
-				</h3>
-				<h3 class="location">Remote</h3>
-				<h3 class="date">Mar 2022 - Nov 2023</h3>
-			</li>
-			<li class="card code-nation">
-				<h2 class="title">Classroom Volunteer</h2>
-				<h3 class="organization">
-					<a href="https://codenation.org/" target="_blank">Code Nation</a>
-				</h3>
-				<h3 class="location">New York, NY</h3>
-				<h3 class="date">Jul 2018 - May 2019</h3>
-			</li>
-		</ul>
-		<h1 class="category">Education</h1>
-		<ul class="experience-list">
-			<li class="card digitalcrafts">
-				<h2 class="title">Full-Stack Web Development</h2>
-				<h3 class="organization">
-					<a href="https://www.digitalcrafts.com/" target="_blank">DigitalCrafts</a>
-				</h3>
-				<h3 class="location">Atlanta, GA</h3>
-				<h3 class="date">Sep 2016 - Jan 2017</h3>
-			</li>
-			<li class="card clark">
-				<h2 class="title">B.A. Psychology // Sociology</h2>
-				<h3 class="organization">
-					<a href="http://www.clarku.edu/" target="_blank">Clark University</a>
-				</h3>
-				<h3 class="location">Worcester, MA</h3>
-				<h3 class="date">Spring 2012</h3>
-			</li>
-		</ul>
-	</div>
+    <h2 class="header experience-header">Experience</h2>
+    <div class="section experience">
+      <h1 class="category">Professional</h1>
+      <ul class="experience-list">
+        <li class="card thoughtspot">
+          <h2 class="title">Senior Software Engineer</h2>
+          <h3 class="organization">
+            <a href="https://thoughtspot.com/" target="_blank">ThoughtSpot</a>
+          </h3>
+          <h3 class="location">Remote</h3>
+          <h3 class="date">July 2023 - present</h3>
+        </li>
+        <li class="card mode">
+          <h2 class="title">Senior Software Engineer</h2>
+          <h3 class="organization">
+            <a href="https://mode.com/" target="_blank">Mode</a>
+          </h3>
+          <h3 class="location">Remote</h3>
+          <h3 class="date">Aug 2021 - July 2023</h3>
+        </li>
+        <li class="card insiten">
+          <h2 class="title">Software Engineer</h2>
+          <h3 class="organization">
+            <a href="https://insiten.com/" target="_blank">Insiten</a>
+          </h3>
+          <h3 class="location">Remote</h3>
+          <h3 class="date">Feb 2017 - Aug 2021</h3>
+        </li>
+        <li class="card jwt">
+          <h2 class="title">Freelance Web Developer</h2>
+          <h3 class="organization">
+            <a href="https://www.jwt.com/en/" target="_blank"
+              >J. Walter Thompson</a
+            >
+          </h3>
+          <h3 class="location">New York, NY</h3>
+          <h3 class="date">Feb 2017</h3>
+        </li>
+        <li class="card doable">
+          <h2 class="title">Freelance Web Developer</h2>
+          <h3 class="organization">
+            <a href="https://www.doable.com/" target="_blank"
+              >Doable Innovation</a
+            >
+          </h3>
+          <h3 class="location">New York, NY</h3>
+          <h3 class="date">Jan 2017 - Feb 2017</h3>
+        </li>
+        <li class="card wunderman">
+          <h2 class="title">Front-End Web Developer</h2>
+          <h3 class="organization">
+            <a href="http://www.wunderman.com/" target="_blank">Wunderman</a>
+          </h3>
+          <h3 class="location">Madrid, Spain</h3>
+          <h3 class="date">Mar 2016 - Aug 2016</h3>
+        </li>
+      </ul>
+      <h1 class="category">Volunteering</h1>
+      <ul class="experience-list">
+        <li class="card quinsigamond">
+          <h2 class="title">Mentor</h2>
+          <h3 class="organization">
+            <a href="https://www.qcc.edu/" target="_blank"
+              >Quinsigamond Community College</a
+            >
+          </h3>
+          <h3 class="location">Remote</h3>
+          <h3 class="date">Mar 2022 - Nov 2023</h3>
+        </li>
+        <li class="card code-nation">
+          <h2 class="title">Classroom Volunteer</h2>
+          <h3 class="organization">
+            <a href="https://codenation.org/" target="_blank">Code Nation</a>
+          </h3>
+          <h3 class="location">New York, NY</h3>
+          <h3 class="date">Jul 2018 - May 2019</h3>
+        </li>
+      </ul>
+      <h1 class="category">Education</h1>
+      <ul class="experience-list">
+        <li class="card digitalcrafts">
+          <h2 class="title">Full-Stack Web Development</h2>
+          <h3 class="organization">
+            <a href="https://www.digitalcrafts.com/" target="_blank"
+              >DigitalCrafts</a
+            >
+          </h3>
+          <h3 class="location">Atlanta, GA</h3>
+          <h3 class="date">Sep 2016 - Jan 2017</h3>
+        </li>
+        <li class="card clark">
+          <h2 class="title">B.A. Psychology // Sociology</h2>
+          <h3 class="organization">
+            <a href="http://www.clarku.edu/" target="_blank"
+              >Clark University</a
+            >
+          </h3>
+          <h3 class="location">Worcester, MA</h3>
+          <h3 class="date">Spring 2012</h3>
+        </li>
+      </ul>
+    </div>
 
-	<div class="contact">
-		<ul class="contact-list">
-			<li>
-				<a class="contact-link" href="mailto:jdcoppola@gmail.com">
-					<i class="contact-icon fa fa-envelope-o" aria-hidden="true"></i>
-				</a>
-			</li>
-			<li>
-				<a class="contact-link" href="https://www.linkedin.com/in/john-coppola/" target="_blank">
-					<i class="contact-icon fa fa-linkedin-square" aria-hidden="true"></i>
-				</a>
-			</li>
-			<li>
-				<a class="contact-link" href="https://github.com/johnnycopes" target="_blank">
-					<i class="contact-icon fa fa-github" aria-hidden="true"></i>
-				</a>
-			</li>
-			<li>
-				<a class="contact-link" href="https://codepen.io/johnnycopes/" target="_blank">
-					<i class="contact-icon fa fa-codepen" aria-hidden="true"></i>
-				</a>
-			</li>
-		</ul>
-	</div>
-</body>
+    <div class="contact">
+      <ul class="contact-list">
+        <li>
+          <a class="contact-link" href="mailto:jdcoppola@gmail.com">
+            <i class="contact-icon fa fa-envelope-o" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            class="contact-link"
+            href="https://www.linkedin.com/in/john-coppola/"
+            target="_blank"
+          >
+            <i
+              class="contact-icon fa fa-linkedin-square"
+              aria-hidden="true"
+            ></i>
+          </a>
+        </li>
+        <li>
+          <a
+            class="contact-link"
+            href="https://github.com/johnnycopes"
+            target="_blank"
+          >
+            <i class="contact-icon fa fa-github" aria-hidden="true"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            class="contact-link"
+            href="https://codepen.io/johnnycopes/"
+            target="_blank"
+          >
+            <i class="contact-icon fa fa-codepen" aria-hidden="true"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
